--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ menu:
 
 
 params:
-  footer: "&copy; [imlk](https://blog.imlk.top) 2017 -- 2021 | imlk\\'s blog | [Github](https://github.com/KB5201314/) | [Email](mailto:me@imlk.top) | [京ICP备 - 2020042968号](http://www.miitbeian.gov.cn/)"
+  footer: "&copy; imlk 2017 -- 2021 | [imlk\\'s blog](https://blog.imlk.top) | [Github](https://github.com/KB5201314/) | [Email](mailto:me@imlk.top) | [京ICP备 - 2020042968号](https://beian.miit.gov.cn/)"
   utteranc:
     enable: true
     repo: "KB5201314/KB5201314.github.io"
